[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pymsgraph"
version = "0.0.1"
authors = [
  { name="Reynold Tabuena", email="reynold.tabuena@outlook.com" },
]
description = "Microsoft Graph API Python Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests", "msal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rynldtbuen/pymsgraph"
